--- a/standard_matrix/standard_matrix.html
+++ b/standard_matrix/standard_matrix.html
@@ -11,10 +11,10 @@
     <h1>Standard Matrix Finder</h1>
   
     <div class="dimensions">
-        <label>Dimension of ℝ<sup>n</sup>)</label>
+        <label>n (dimension of ℝ<sup>n</sup>)</label>
         <input type="number" id="nInput" min="1" max="5" value="2" step="1">
     
-        <label>Dimension of ℝ<sup>m</sup>)</label>
+        <label>m (dimension of ℝ<sup>m</sup>)</label>
         <input type="number" id="mInput" min="1" max="5" value="2" step="1">
 
 
